2007-01-15 Kimmo
 Bump revision to 1.2.10 for new release
  Manual: WinMerge_help.xml

2007-01-14 Kimmo
 PATCH: [ 1633560 ] Manual: WinMerge minimizes time needed for ignored files
  Manual: Filters.xml

2007-01-14 Tim
 PATCH: [ 1633632 ] Plugin to ignore leading line numbers in text files
  Manual: Plugins.xml

2007-01-04 Tim
 PATCH: [ 1626464 ] Manual: Highlight examples with CSS
  Manual/css: all.css help.css print.css
 PATCH: [ 1627363 ] Manual: Merge with Plugins.txt and list_of_sources.txt
  Manual: Plugins.xml

2007-01-02 Tim
 PATCH: [ 1624905 ] Manual: Remove <productname>
  Manual: Faq.xml Open_paths.xml
 PATCH: [ 1624906 ] Manual: Add registered trademark for Microsoft
  Manual: Faq.xml Plugins.xml

2006-12-30 Tim
 PATCH: [ 1623604 ] Manual: Remove <screen> from Command_line.xml
  Manual: Command_line.xml
  Manual/css: all.css help.css print.css

2006-12-20 Kimmo
 PATCH: [ 1618452 ] Manual: Add new FAQ item about all lines marked different
  Manual: Faq.xml
 PATCH: [ 1618935 ] Manual: Add screenshots and description for editor margin
  Manual: Compare_files.xml
  Manual/screenshots new files: filecomp_margin1.png filecomp_margin2.png

2006-12-12 Kimmo
 Update revision number to 1.2.9 for new release
  Manual: WinMerge_help.xml

2006-12-11 Tim
 PATCH: [ 1611595 ] Manual: Merge Plugins.xml with readme_users.txt
  Manual: Plugins.xml
 PATCH: [ 1612824 ] Manual: Use italic text for GUI elements
  Manual/css: all.css help.css print.css

2006-12-08 Tim
 PATCH: [ 1610448 ] Manual: Requirements section and layout changes for Plugins
  Manual: Plugins.xml

2006-12-05 Kimmo
 PATCH: [ 1608705 ] Manual: Fix indexterms in Folder Compare
  Manual: Compare_dirs.xml
 PATCH: [ 1608708 ] Manual: Fix indexterms in File Compare
  Manual: Compare_files.xml

2006-12-04 Kimmo
 PATCH: [ 1608003 ] Manual: Fix indexterm position in Quick Start
  Manual: Introduction.xml
 PATCH: [ 1608150 ] Manual: Fix indexterm position in Introduction
  Manual: Quick_start.xml

2006-12-03 Kimmo