@@ -1,3 +1,8 @@
+2007-01-16 Tim
+ PATCH: [ 1636315 ] Manual: Nicer navigation layout for HTML version
+  Manual/build: build_html.xsl
+  Manual/css: all.css
+
 2007-01-15 Kimmo
  Bump revision to 1.2.10 for new release
   Manual: WinMerge_help.xml
